src/main/java/semantic/symbolTable/test/failing/localVarDefinedInParam.ru
struct A {}
impl A {
    .(){}
    fn someFn(Int a)-> void {
        Str a;
    }
}
start{}